test/cli/test/nil-values-in-variables/exclude_namespaces_dynamically/kyverno-test.yaml
name: exclude-namespaces-example
policies:
- exclude_namespaces_dynamically.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: exclude-namespaces-example
  resources:
  - bad-pod02
  result: error
  rule: exclude-namespaces-dynamically
- kind: Pod
  policy: exclude-namespaces-example
  resources:
  - bad-pod01
  result: pass
  rule: exclude-namespaces-dynamically
variables: values.yaml
