test/cli/test/nil-values-in-variables/exclude_namespaces_dynamically/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod01
  namespace: vivek
  labels:
    foo: bar
spec:
  containers:
  - name: nginx
    image: nginx:alpine 
---

apiVersion: v1
kind: Pod
metadata:
  name: bad-pod02
  labels:
    foo: bar
spec:
  containers:
  - name: nginx
    image: nginx:alpine
